@@ -141,7 +141,7 @@ public class RemoteMaster extends JP1Frame implements ActionListener, PropertyCh
 
   /** Description of the Field. */
   public final static String version = "v2.09";
-  public final static int buildVer = 7;
+  public final static int buildVer = 9;
   
   public enum WavOp { NEW, MERGE, SAVE, PLAY };
   
